--- a/作业/首页.html
+++ b/作业/首页.html
@@ -1038,7 +1038,7 @@
 							<a href=""><img src="3(1).png"/></a>
 						</div>
 						<div class="center-cente2-small">
-							<a href=""><img src="qqq.png"/></a>
+							<a href="https://niuyuxin123.github.io/WEB2/%E4%BD%9C%E4%B8%9A/%E8%AF%A6%E6%83%85%E9%A1%B5.html"><img src="qqq.png"/></a>
 						</div>
 					</div>
 				</div>
