--- a/作业/详情页.html
+++ b/作业/详情页.html
@@ -911,18 +911,16 @@
 		<div class="daohang">
 			<div class="daohang1">
 				<div class="daohanglan">
-					<a href="">
 						<ul>
-							<li class="activer">首页</li>
-							<li class="pt">热门品牌</li>
-							<li class="pt">美妆个户</li>
-							<li class="pt">服饰鞋包</li>
-							<li class="pt">母婴生活</li>
-							<li class="pt">食品保健</li>
-							<li class="pt">韩国直邮</li>
-							<li class="pt1">跨境购</li>
+							<a href="https://niuyuxin123.github.io/WEB2/%E4%BD%9C%E4%B8%9A/%E9%A6%96%E9%A1%B5.html"><li class="activer">首页</li></a>
+							<a href="#"><li class="pt">热门品牌</li></a>
+							<a href="#"><li class="pt">美妆个户</li></a>
+							<a href="#"><li class="pt">服饰鞋包</li></a>
+							<a href="#"><li class="pt">母婴生活</li></a>
+							<a href="#"><li class="pt">食品保健</li></a>
+							<a href="#"><li class="pt">韩国直邮</li></a>
+							<a href="#"><li class="pt1">跨境购</li></a>
 						</ul>
-					</a>
 				</div>
 				<div class="daohangtu">
 					<img src="ff_03.jpg"/>
